--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="./images/logo.png" />
+    <link rel="icon" type="image/png" href="./images/eggsoutline.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Weather web site created using create-react-app"
+      content="Track your healthy yosheats here!"
     />
-    <link rel="apple-touch-icon" href="./images/logo.png" />
+    <link rel="apple-touch-icon" href="./images/eggsoutline.png" />
     <link rel="manifest" href="./manifest.json" />
-    <title>Weather App</title>
+    <title>Yosheats</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
