--- a/public/offline.html
+++ b/public/offline.html
@@ -11,7 +11,7 @@
       body {
         height: 100%;
         margin: 0;
-        background: #0a1f44;
+        background: #7f9cce;
         display: flex;
         align-items: center;
         text-align: center;
@@ -37,7 +37,7 @@
   <body>
     <div class="city">
       <h2 class="city-name">
-        <span>Please go online to check the current weather.</span>
+        <span>Please go online to check Yosheats.</span>
       </h2>
     </div>
   </body>
