pwa icons && not found

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="./images/eggsoutline.png" />
+    <link rel="icon" type="image/png" href="./images/smallLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Track your healthy yosheats here!"
     />
-    <link rel="apple-touch-icon" href="./images/eggsoutline.png" />
+    <link rel="apple-touch-icon" href="./images/smallLogo.png" />
     <link rel="manifest" href="./manifest.json" />
     <title>Yosheats</title>
   </head>
