--- a/public/offline.html
+++ b/public/offline.html
@@ -11,7 +11,7 @@
       body {
         height: 100%;
         margin: 0;
-        background: #7f9cce;
+        background: #D4EAC3;
         display: flex;
         align-items: center;
         text-align: center;
@@ -24,20 +24,24 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        padding: 40px 8%;
+        padding: 40px 20%;
         border-radius: 20px;
-        background: #fff;
+        background: #F3F9EE;
       }
 
       .city-name {
         font-size: 2em;
+      }
+
+      .offline-font {
+        font-family: 'Lucida Console', Courier, monospace;
       }
     </style>
   </head>
   <body>
     <div class="city">
       <h2 class="city-name">
-        <span>Please go online to check Yosheats.</span>
+        <span class="offline-font">Please go online to check Yosheats.</span>
       </h2>
     </div>
   </body>
